src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_card_badges_baseline.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks                                                                                                          🔕  [N]
        ▸ backlog 4 [ ]                 ◦ running 4                   ◦ review 3                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── crashed               │  ── changes requested        │──────────────────────────────
  ▌ #1 bug task               │  ▎ #8 crashed             │  ▎ #10 changes requested     │  ▎ #12 merged
   ◦ <1h [bug]                │   ○ detached              │   ● PR #43                   │   ✔ PR #45 merged
──────────────────────────────│                           │                              │──────────────────────────────
  ▎ #2 feature task           │  ── stale                 │  ── awaiting review          │
   ◦ <1h [feat]               │  ▎ #6 stale               │  ▎ #9 awaiting review        │
──────────────────────────────│   ◉ stale · 12m           │   ● PR #42                   │
  ▎ #3 chore task             │                           │                              │
   ◦ <1h [chore]              │  ── needs input           │  ── approved                 │
──────────────────────────────│  ▎ #7 needs input         │  ▎ #11 approved              │
  ▎ #4 fix task               │   ◉ blocked               │   ● PR #44                   │
   ◦ <1h [fix]                │                           │──────────────────────────────│
──────────────────────────────│  ── active                │                              │
                              │  ▎ #5 active              │                              │
                              │   ◉ running               │                              │
                              │───────────────────────────│                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [S]plit
