src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_card_with_labels.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks                                                                                                          🔕  [N]
        ▸ backlog 1 [ ]                 ◦ running 0                   ◦ review 1                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│                           │  ── awaiting review          │
  ▌ #1 CVE-2024-9999          │                           │  ▎ #2 PR review              │
   ◦ <1h [scala-common] [secur│                           │   ● PR #77 [app-frontend]    │
──────────────────────────────│                           │──────────────────────────────│
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [S]plit
