src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_folded_review_section.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 0                  ◦ RUNNING 0                 ▸ REVIEW 4 [ ]                    ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │                           │  ── approved (3) ⋯           │
                              │                           │                              │
                              │                           │  ── awaiting review          │
                              │                           │ ╭──────────────────────────╮ │
                              │                           │ │  ▎ #4 collapse sub-status│ │
                              │                           │ │   ● PR #1                │ │
                              │                           │ ╰──────────────────────────╯ │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[a] select all  [n]ew  [E]pic  [D] quick  [s]plit  [F]lat  [f]ilter  [/] search  [?] help
